EXTRA_DIST = \
	arrow.xpm \
	atrfartool.xpm \
	atrneartool.xpm \
	bgmovetool.xpm \
	bgscaletool.xpm \
	crosshairrow.xpm \
	cubetool.xpm \
	cylindertool.xpm \
	dragvertextool.xpm \
	ellipsetool.xpm \
	extrudetool.xpm \
	jointtool.xpm \
	pointtool.xpm \
	projtool.xpm \
	mm3dlogo-16x16.xpm \
	mm3dlogo-32x32.xpm \
	movetool.xpm \
	mviewport.xpm \
	nulltool.xpm \
	polytool.xpm \
	rectangletool.xpm \
	rotatetool.xpm \
	scaletool.xpm \
	selectbonetool.xpm \
	selectpointtool.xpm \
	selectprojtool.xpm \
	selectconnectedtool.xpm \
	selectfacetool.xpm \
	selectgrouptool.xpm \
	selectvertextool.xpm \
	sheartool.xpm \
	texframe.xpm \
	torustool.xpm \
	vertextool.xpm \
	mm3dlogo-32x32.ico 

