EXTRA_DIST = \
	example_bool_before.png \
	example_bool_fuse.png \
	example_bool_intersect.png \
	example_bool_object_a.png \
	example_bool_object_b.png \
	example_bool_subtract.png \
	example_bool_union.png \
	example_dragvertex_after.png \
	example_dragvertex_before.png \
	example_edgeturn_after.png \
	example_edgeturn_before.png \
	example_faceout_after.png \
	example_faceout_before.png \
	example_simplify_after.png \
	example_simplify_before.png \
	viewport_ortho_filled.png \
	viewport_ortho_wireframe.png \
	viewport_persp_filled.png \
	viewport_persp_wireframe.png
