EXTRA_DIST = \
	atrfartool.jpg \
	atrfartool.png \
	atrneartool.jpg \
	atrneartool.png \
	bgmovetool.jpg \
	bgmovetool.png \
	bgscaletool.jpg \
	bgscaletool.png \
	cubetool.jpg \
	cubetool.png \
	cylindertool.jpg \
	cylindertool.png \
	dragvertextool.jpg \
	dragvertextool.png \
	ellipsetool.jpg \
	ellipsetool.png \
	extrudetool.jpg \
	extrudetool.png \
	image.png \
	jointtool.jpg \
	jointtool.png \
	movetool.jpg \
	movetool.png \
	polytool.jpg \
	polytool.png \
	pointtool.jpg \
	pointtool.png \
	projtool.jpg \
	projtool.png \
	rectangletool.jpg \
	rectangletool.png \
	rotatetool.jpg \
	rotatetool.png \
	scaletool.jpg \
	scaletool.png \
	selectbonetool.jpg \
	selectbonetool.png \
	selectconnectedtool.jpg \
	selectconnectedtool.png \
	selectfacetool.jpg \
	selectfacetool.png \
	selectgrouptool.jpg \
	selectgrouptool.png \
	selectpointtool.jpg \
	selectpointtool.png \
	selectprojtool.jpg \
	selectprojtool.png \
	selectvertextool.jpg \
	selectvertextool.png \
	sheartool.jpg \
	sheartool.png \
	torustool.jpg \
	torustool.png \
	vertextool.png 

